# cmake_gtest_demo

./: CMakeLists.txt  README.md  test.cpp
example/: CMakeLists.txt  example.cpp
